--- a/appSimple/index.html
+++ b/appSimple/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Radio Player</title>
     <link rel="icon" type="image/png" href="img/cover.png" />
-    <link rel="stylesheet" href="style.css">   
-    <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/style.css">   
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <div class="cover-site">
@@ -116,8 +119,8 @@
     </div>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.marquee@1.6.0/jquery.marquee.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function() {
